fix scrollbar layout shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,5 +77,6 @@
   body {
     @apply dark bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
+    overflow-y: scroll;
   }
 }
